# workspace-onboarding-ux

./: .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  elm.json  package-lock.json  package.json  pyproject.toml  renovate.json  workspace_onboarding_ux.py
.cursor/rules/: flask.mdc  workspace-onboarding-python.mdc
.github/workflows/: build.yml  deploy.yml
.nomad/: workspace-onboarding-ux.nomad
.nomad/conf/: .env.tpl  nginx.conf
.nomad/scripts/: prestart.sh
elm/: Main.elm
js/: entrypoint.js
review/: elm.json
review/src/: ReviewConfig.elm
static/: manifest.json
templates/: form.html  ineligible.html  layout.html  provisioned.html
