[tool.poetry]
name = "workspace-onboarding-ux"
version = "0"
description = "Overengineered web form to facilitate onboarding users to Google Workspace"
authors = ["Kristaps Berzinch <kristapsberzinch@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "3.1.2"
Authlib = "1.6.6"
requests = "2.32.5"
uwsgi = "2.0.31"
sentry-sdk = {extras = ["pure-eval", "flask"], version = "2.48.0"}
flask-caching = "2.3.1"
celery = {extras = ["redis"], version = "5.6.1"}
slack-sdk = "3.39.0"
ldap3 = "2.9.1"
google-api-python-client = "2.187.0"
hubspot-api-client = "12.0.0"

[tool.poetry.group.dev.dependencies]
black = "25.12.0"
flake8 = "7.3.0"
flake8-bugbear = "25.11.29"
flake8-import-order = "0.19.2"
mypy = "1.19.1"
pylint = "4.0.4"
types-requests = "^2.28.11.7"
celery-types = "0.24.0"
types-ldap3 = "^2.9.13.20250516"
types-authlib = "^1.6.5.20251005"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py314']
